--- a/evergreen-uaa-ui/pom.xml
+++ b/evergreen-uaa-ui/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>uaa-ui</artifactId>
-
+    <artifactId>evergreen-uaa-ui</artifactId>
     <parent>
-        <groupId>com.imooc</groupId>
-        <artifactId>mono-uaa</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>org.evergreen</groupId>
+        <artifactId>evergreen-uaa-all</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <build>
