--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.3.0.RELEASE</version>
-    <relativePath /> <!-- lookup parent from repository -->
+    <relativePath />
   </parent>
   <groupId>org.evergreen</groupId>
   <artifactId>evergreen-uaa-all</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>evergreen-uaa-all</name>
+  <packaging>pom</packaging>
   <description>evergreen-uaa-all服务端和客户端</description>
 
   <modules>
@@ -24,9 +24,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <frontend-maven-plugin.version>1.9.1</frontend-maven-plugin.version>
-    <passay.version>1.6.0</passay.version>
-    <problem.version>0.26.1</problem.version>
-    <jjwt.version>0.11.1</jjwt.version>
+    <passay.version>1.6.2</passay.version>
+    <problem.version>0.27.0</problem.version>
+    <jjwt.version>0.11.5</jjwt.version>
     <otp.version>0.2.0</otp.version>
     <redisson.version>3.12.5</redisson.version>
     <embedded.redis.version>0.7.2</embedded.redis.version>
