调整evergreen-uaa-ui模块中登陆逻辑，完成登录第一步

--- a/evergreen-uaa-ui/.env.production
+++ b/evergreen-uaa-ui/.env.production
@@ -1,4 +1,4 @@
-NODE_ENV='production'
+NODE_ENV='development'
 VUE_APP_TITLE=用户认证授权服务
 VUE_APP_COPY_RIGHT=Spring Security Evergreen UAA
-VUE_APP_API_URL=
+VUE_APP_API_URL=http://localhost:8088
